# eduf_backend

./: .gitignore  flake.nix
backend/: chats.db  main.py  pyproject.toml
backend/auth0/: config.py  utils.py
backend/docs/: references.md
backend/llama_core/: config.py  core.py  pydantic_model.py
backend/models/: model.py  pydantic_model.py
backend/routers/: :wq  chats.py  files.py  rag.py
